NSFigAndeler.jrxml virker

--- a/inst/jrxml/NIRFigGjsnGrVar.jrxml
+++ b/inst/jrxml/NIRFigGjsnGrVar.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-07-05T10:59:20 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FigAndeler" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="no.skde.report.norscir.NorScirCommonScriptletRPackage" isIgnorePagination="true" uuid="1e5ff9d1-11ac-4f35-a45e-0491016fbb9c">
+<!-- 2016-06-09T10:26:09 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="NIRFigGjsnGrVar" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="no.skde.report.nir.NirCommonScriptletRPackage" uuid="45fe8ce0-ff63-4edb-9fe2-e19b7f09ad23">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="ireport.jasperserver.url" value="https://test.helseregister.no/rapporteket_test/"/>
-	<property name="ireport.jasperserver.report.resource" value="/organizations/NordicSCIR/Reports/Kliniske/NSFigAndeler_files/Main_Jrxml"/>
-	<property name="ireport.jasperserver.reportUnit" value="/organizations/NordicSCIR/Reports/Kliniske/NSFigAndeler"/>
+	<property name="ireport.jasperserver.report.resource" value="/organizations/Intensiv/Reports/NIRFigGjsnGrVar_files/Main_Jrxml"/>
+	<property name="ireport.jasperserver.reportUnit" value="/organizations/Intensiv/Reports/NIRFigGjsnGrVar"/>
 	<property name="ireport.jasperserver.user" value="superuser"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="LoggedInUser" class="com.jaspersoft.jasperserver.api.metadata.user.domain.User" isForPrompting="false">
@@ -18,23 +18,23 @@
 		<defaultValueExpression><![CDATA[$P{LoggedInUser}.getFullName()]]></defaultValueExpression>
 	</parameter>
 	<parameter name="LoggedInUserAttribute_AVD_RESH" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="LoggedInUserAVD_RESH" class="java.lang.String" isForPrompting="false">
+	<parameter name="LoggedInUserAVD_RESH" class="java.lang.String">
 		<parameterDescription><![CDATA[Provides the AVD_RESH user attribute. Relevant only for users externally defined by helseregister]]></parameterDescription>
 		<defaultValueExpression><![CDATA[$P{LoggedInUserAttribute_AVD_RESH}]]></defaultValueExpression>
 	</parameter>
 	<parameter name="reportName" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("NSFigAndeler")]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new String("NIRFigGjsnGrVar")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="rPackageName" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("nordicscir")]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new String("intensiv")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="rFunctionCallString" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("NSFigAndeler(RegData=0, outfile=outfile, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, AIS=AIS, minald=minald, maxald=maxald, erMann=erMann, traume='', enhetsUtvalg=enhetsUtvalg, hentData=1, reshID=reshID)")]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new String("NIRFigGjsnGrVar(RegData=0, valgtVar=valgtVar, valgtMaal=valgtMaal, minald=minald, maxald=maxald, datoFra=datoFra, datoTil=datoTil, grType=grType, InnMaate=InnMaate, dodInt=dodInt, erMann=erMann, hentData=1, preprosess=1, outfile=outfile)")]]></defaultValueExpression>
 	</parameter>
-	<parameter name="varName" class="java.lang.String">
-		<defaultValueExpression><![CDATA[new String("Alder")]]></defaultValueExpression>
+	<parameter name="valgtVar" class="java.lang.String">
+		<defaultValueExpression><![CDATA[new String("alder")]]></defaultValueExpression>
 	</parameter>
-	<parameter name="startDate" class="java.util.Date">
+	<parameter name="beginDate" class="java.util.Date">
 		<defaultValueExpression><![CDATA[new SimpleDateFormat("yyyy-MM-dd").parse("2011-01-01")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="endDate" class="java.util.Date">
@@ -46,18 +46,11 @@
 	<parameter name="maxAge" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[new java.lang.Integer(130)]]></defaultValueExpression>
 	</parameter>
-	<parameter name="erMann" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[new Integer(99)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="ais" class="java.util.List">
-		<defaultValueExpression><![CDATA["all"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="isTrauma" class="java.lang.String">
-		<defaultValueExpression><![CDATA[new String("na")]]></defaultValueExpression>
-	</parameter>
-	<parameter name="orgUnitSelection" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[new Integer(1)]]></defaultValueExpression>
-	</parameter>
+	<parameter name="statMeasureMethod" class="java.lang.String"/>
+	<parameter name="inFromSituation" class="java.lang.Integer"/>
+	<parameter name="grType" class="java.lang.Integer"/>
+	<parameter name="vitalStatus" class="java.lang.Integer"/>
+	<parameter name="erMann" class="java.lang.Integer"/>
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
@@ -71,9 +64,9 @@
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="555" splitType="Stretch">
+		<band height="800" splitType="Stretch">
 			<image hAlign="Center" vAlign="Top">
-				<reportElement x="0" y="0" width="555" height="555" uuid="c3c7fbda-da15-48c6-b23a-612421678334"/>
+				<reportElement x="29" y="0" width="560" height="800" uuid="cf2858bc-afd4-47d0-a5ee-9e434e794e50"/>
 				<imageExpression><![CDATA["file:" + $P{REPORT_SCRIPTLET}.getFileName()]]></imageExpression>
 			</image>
 		</band>
