--- a/inst/jrxml/NSFigGjsnGrVar.jrxml
+++ b/inst/jrxml/NSFigGjsnGrVar.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-07-06T07:29:57 -->
+<!-- 2016-07-06T07:56:33 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FigAndeler" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="no.skde.report.norscir.NorScirCommonScriptletRPackage" isIgnorePagination="true" uuid="1e5ff9d1-11ac-4f35-a45e-0491016fbb9c">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -29,7 +29,7 @@
 		<defaultValueExpression><![CDATA[new String("nordicscir")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="rFunctionCallString" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("NSFigGjsnGrVar(RegData=0, outfile=outfile, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, AIS=AIS, minald=minald, maxald=maxald, erMann=erMann, traume=traume, valgtMaal=valgtMaal, hentData=1")]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new String("NSFigGjsnGrVar(RegData=0, outfile=outfile, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, AIS=AIS, minald=minald, maxald=maxald, erMann=erMann, traume=traume, valgtMaal=valgtMaal, hentData=1)")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="varName" class="java.lang.String">
 		<defaultValueExpression><![CDATA[new String("Alder")]]></defaultValueExpression>
@@ -53,6 +53,7 @@
 	<parameter name="isTrauma" class="java.lang.String">
 		<defaultValueExpression><![CDATA[new String("na")]]></defaultValueExpression>
 	</parameter>
+	<parameter name="statMeasureMethod" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
